tests/rune_literal_multiple_bad.stderr
tests/rune_literal_multiple_bad.sl:2:11: error: SL1015: rune literal must contain exactly one Unicode code point
