tests/rune_literal_multiple_bad.sl
// Verifies rune literal multiple is rejected.
const x = 'ab'
